--- a/example/form.html
+++ b/example/form.html
@@ -7,6 +7,11 @@
 		<!--[if IE]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+		
+		<style>
+			.form-controlGroup-message {display: none; margin-top: 7px;}
+			.form-controlGroup--error .form-controlGroup-message {display: block;}
+		</style>
 	</head>
 	<body>
 		<form class="l-container">
@@ -18,10 +23,15 @@
 				<label class="form-label" for="field2">Email, required</label>
 				<input class="form-input" id="field2" name="field2" type="email" required>
 			</div>
+			<div class="form-controlGroup">
+				<label class="form-label" for="field3">Text, required with message</label>
+				<input class="form-input" id="field3" name="field3" type="text" data-val-required="This field is required" required>
+				<div class="form-controlGroup-message"></div>
+			</div>
 			<button class="btn btn--primary" type="submit">Submit</button>
 		</form>
 	</body>
-	<script src="../daccord.js"></script>
+	<script src="../dist/daccord.web.js"></script>
 	<script>
 		new Daccord(document.querySelector('form'));
 	</script>
