Changed package name for npm

--- a/example/form.html
+++ b/example/form.html
@@ -14,7 +14,7 @@
 		</style>
 	</head>
 	<body>
-		<form class="l-container">
+		<form class="l-container" action="/somewhere">
 			<div class="form-controlGroup">
 				<label class="form-label" for="field1">Text, required, maxlength 10</label>
 				<input class="form-input" id="field1" name="field1" type="text" required maxlength="10">
